--- a/src/components/Residencies/Residencies.scss
+++ b/src/components/Residencies/Residencies.scss
@@ -43,3 +43,33 @@
 .swiper-slide {
     overflow: visible;
 }
+
+.swiper-horizontal, .swiper-wrapper {
+    overflow: visible;
+}
+
+.r-button {
+    position: absolute;
+    gap: 1rem;
+    top: -4rem;
+    right: 0rem;
+    z-index: 200;
+
+    button {
+        font-size: 1.2rem;
+        padding: 0.2rem 0.8rem;
+        color: blue;
+        border: none;
+        border-radius: 5px;
+        background-color: white;
+        cursor: pointer;
+    }
+
+    &>:nth-child(1){
+        background-color: #EEEEFF;
+    }
+
+    &>:nth-child(2){
+        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.25);
+    }
+}
