--- a/src/components/Companies/Companies.scss
+++ b/src/components/Companies/Companies.scss
@@ -1,8 +1,14 @@
-.c-container {
+.cp-container {
     justify-content: space-around;
     gap: 1rem;
 
     &>img {
         width: 9rem;
+    }
+}
+
+@media (max-width: 760) {
+    .cp-container{
+        flex-direction: row;
     }
 }
