--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,3 +16,32 @@
     }
 }
 
+.menu-icon {
+    display: none;
+}
+
+
+@media(max-width: 768px){
+    .menu-icon {
+        display: block;
+        cursor: pointer;
+    }
+
+    .h-menu {
+        color: var(--black);
+        position: absolute;
+        top: 3rem;
+        right: 4rem;
+        background: white;
+        flex-direction: column;
+        font-weight: 500;
+        gap: 2rem;
+        padding: 3rem;
+        z-index: 2;
+        border-radius: 10px;
+        align-items: flex-start;
+        box-shadow: 0px 4px 4px rgba($color: #000000, $alpha: 0.05);
+
+        transition: all 400ms ease-in-out;
+    }
+}
