--- a/src/components/Value/Value.scss
+++ b/src/components/Value/Value.scss
@@ -51,3 +51,27 @@
         }
     }
 }
+
+@media (max-width:980px) {
+    .v-container{
+        flex-direction: column;
+    }
+    .accordion-button{
+        row-gap: 1rem;
+    }
+    .accordion-button>span{
+        font-size: 1rem;
+    }
+    .accordion-button> .icon {
+        padding: 5px !important;
+        margin: 0 3px;
+    }
+
+}
+
+@media (max-width:400px) {
+    .accordion-button> .icon {
+        padding: 0 !important;
+        margin: 0 ;
+    }
+}
