--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -42,6 +42,6 @@
         align-items: flex-start;
         box-shadow: 0px 4px 4px rgba($color: #000000, $alpha: 0.05);
 
-        transition: all 400ms ease-in-out;
+        transition: all 600ms ease-in   ;
     }
 }
